another small manual fix

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -3231,7 +3231,7 @@ Yet, for large values of \ttt{efConstruction} and \ttt{efSearch} (e.g., larger t
 it sometimes makes sense to increase the number of sub-searches rather than further increasing
 \ttt{efConstruction} and/or \ttt{efSearch}.
 
-The recall values are also affected by parameters \ttt{NN} (for SW-graph) and \ttt{maxM} (HNSW).
+The recall values are also affected by parameters \ttt{NN} (for SW-graph) and \ttt{M} (HNSW).
 Increasing the values of these parameters (to a certain degree) leads to better recall and shorter retrieval times
 (at the expense of longer indexing time).  The reasonable range of values for these parameters is 5-100.
 
